--- a/index.html
+++ b/index.html
@@ -25,8 +25,46 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section>Slide 1</section>
-				<section>Slide 2</section>
+        <section data-markdown>
+          ## Group-D
+          ---
+          ### Daytrips
+        </section>
+        <section data-markdown>
+            <script type="text/template">
+              ## Login
+              ---
+              <img data-src="./lib/images/login-hq.gif"/>
+          </script>
+        </section>
+        <section data-markdown>
+            <script type="text/template">
+              ## Settings
+              ---
+              <img data-src="./lib/images/settings-hq.gif"/>
+          </script>
+        </section>
+        <section data-markdown>
+            <script type="text/template">
+              ## New Review
+              ---
+              <img data-src="./lib/images/newreview-hq.gif"/>
+          </script>
+        </section>
+        <section data-markdown>
+            <script type="text/template">
+              ## New Trip
+              ---
+              <img data-src="./lib/images/newtrip-hq.gif"/>
+          </script>
+        </section>
+        <section data-markdown>
+            <script type="text/template">
+              ## Edit Trip
+              ---
+              <img data-src="./lib/images/edittrip-hq.gif"/>
+          </script>
+        </section>
 			</div>
 		</div>
 
