--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
           </section>
           <section>
               <blockquote>
-                As a businessman, I want to able to find trips on a specific time period, because I will only be stopping by for a short time.
+                myquote
               </blockquote>
               <pre>
                 <code data-trim>
@@ -147,7 +147,7 @@
             </section>
             <section>
                 <blockquote>
-                    As a tourist, I want to be able to select the type of tour right away, because I don’t want to scroll through tours that don’t interest me at all.
+                    quote 2.0
                 </blockquote>
                 <pre>
                   <code data-trim>
@@ -162,6 +162,72 @@
                   </code>
                 </pre>
               </section>
+        </section>
+        <section>
+          <section data-markdown>
+              <script type="text/template">
+                ## New Review
+                ---
+                <img data-src="./lib/images/newreview-hq.gif" height="600"/>
+              </script>
+            </section>
+          <section data-markdown>
+            <script type="text/template">
+              ## User stories
+              ---
+              <p class="fragment highlight-green">&#x2611</p>
+              <blockquote>
+                As a tourist, I want to score and review the tour I went on, because I had an amazing time and I want others to choose this tour to have the same experience.
+              </blockquote>
+              <p class="fragment highlight-green">&#x2611</p>
+              <blockquote>
+                As a user, I want to have the option to keep my review private or make it public, because I’m shy and I don’t want to others to read my thoughts.
+              </blockquote>
+            </script>
+          </section>
+        </section>
+        <section>
+          <section data-markdown>
+            <script type="text/template">
+              ## New Trip
+              ---
+              <img data-src="./lib/images/newtrip-hq.gif" height="600"/>
+            </script>
+          </section>
+          <section data-markdown>
+            <script type="text/template">
+              ## User stories
+              ---
+              <p class="fragment highlight-green">&#x2611</p>
+              <blockquote>
+                As a tour operator, I want to be able to categorize my tours, because I want potential clients to easily find tours that interest them 
+              </blockquote>
+              <p class="fragment highlight-green">&#x2611</p>
+              <blockquote>
+                As a foreigner, I want to find a tour that is guided in my own language, because I don't do English good
+              </blockquote>
+            </script>
+          </section>
+          <section data-markdown>
+            <script type="text/template">
+              <p class="fragment highlight-green">&#x2611</p>
+              <blockquote>
+                As an environmentalist, I want to be able to find tour operators that follow a good environmental policy, because I care about my environmental impact.
+              </blockquote>
+              <p class="fragment highlight-green">&#x2611</p>
+              <blockquote>
+                As a tourist, I want to be able to find tours with great accessibility, because I am disabled.
+              </blockquote>
+            </script>
+          </section>
+          <section data-markdown>
+            <script type="text/template">
+              <p class="fragment highlight-green">&#x2611</p>
+              <blockquote>
+                As a tourist, I want to find tours that do not involve large groups, because I am a very private person.
+              </blockquote>
+            </script>
+          </section>
         </section>
         <section>
           <section data-markdown>
@@ -184,23 +250,57 @@
           </section>
           <section data-markdown>
             <script type="text/template">
-              ## New Review
-              ---
-              <img data-src="./lib/images/newreview-hq.gif" height="600"/>
-            </script>
-          </section>
-          <section data-markdown>
-            <script type="text/template">
-              ## New Trip
-              ---
-              <img data-src="./lib/images/newtrip-hq.gif" height="600"/>
-            </script>
-          </section>
-          <section data-markdown>
-            <script type="text/template">
               ## Edit Trip
               ---
               <img data-src="./lib/images/edittrip-hq.gif" height="600"/>
+            </script>
+          </section>
+        </section>
+        <section>
+          <section data-markdown>
+            <script type="text/template">
+              ## User stories
+              ---
+              <p class="fragment highlight-red">&#x2612</p>
+              <blockquote>
+                As a tourist, I want to be able to find a bus sightseeing tour tomorrow morning, because I want to make the most of my time on vacation.
+              </blockquote>
+              <p class="fragment highlight-red">&#x2612</p>
+              <blockquote>
+                As a tourist, I want to be able to find tours in my local area, because I will only be staying there.
+              </blockquote>
+            </script>
+          </section>
+          <section data-markdown>
+            <script type="text/template">
+              <p class="fragment highlight-red">&#x2612</p>
+              <blockquote>
+                As a tourist, I want to find the cheapest tour available, because I am traveling on a budget.
+              </blockquote>
+              <p class="fragment highlight-red">&#x2612</p>
+              <blockquote>
+                As a businessman, I want to able to find trips on a specific time period, because I will only be stopping by for a short time.
+              </blockquote>
+            </script>
+          </section>
+          <section data-markdown>
+            <script type="text/template">
+              <p class="fragment highlight-red">&#x2612</p>
+              <blockquote>
+                As a user, I want to see all the tour operators that offer a certain type of tours (f.x. River rafting), because I want to select the tour operator that I like best.
+              </blockquote>
+              <p class="fragment highlight-red">&#x2612</p>
+              <blockquote>
+                As a user, I want to be able to order tour operators by their review score, because I only want to go with the best and most professional company.
+              </blockquote>
+            </script>
+          </section>
+          <section data-markdown>
+            <script type="text/template">
+              <p class="fragment highlight-red">&#x2612</p>
+              <blockquote>
+                As a tourist, I want to be able to select the type of tour right away, because I don’t want to scroll through tours that don’t interest me at all.
+              </blockquote>
             </script>
           </section>
         </section>
