--- a/index.html
+++ b/index.html
@@ -256,30 +256,32 @@
             <script type="text/template">
               ## What went well?
               ---
-              <div class="fragment"  data-fragment-index="1">
-                <p>Structuring a well organized database</p>
-              </div>
-              <div class="fragment"  data-fragment-index="2">
-                <p>this and that</p>
-              </div>
+              <p class="fragment"  data-fragment-index="1">Structuring a well organized database</p>
+              <p class="fragment"  data-fragment-index="2">Writing maintainable and scaleable code</p>
             </script>
           </section>
           <section data-markdown>
             <script type="text/template">
-              ## What went wrong?
+              ## How did you do with regard to your original project plan?
               ---
-              <div class="fragment"  data-fragment-index="1">
-                <p>ddd</p>
-              </div>
-              <div class="fragment"  data-fragment-index="2">
-                <p>this and that</p>
-              </div>
+              <p class="fragment"  data-fragment-index="1">The project was finished according to the project plan</p>
+              <p class="fragment"  data-fragment-index="2">The workload was not evenly spaced out but rather got completed in bursts</p>
             </script>
           </section>
           <section data-markdown>
-            ## Burndow chart
-            ---
-            ![Alt Text](https://media.giphy.com/media/vFKqnCdLPNOKc/giphy.gif)
+            <script type="text/template">
+              ## What would you do differently next time?
+              ---
+              <p class="fragment"  data-fragment-index="1">Focusing first on the fundamental functionality of our project</p>
+            </script>
+          </section>
+          <section data-markdown>
+            <script type="text/template">
+              ## How would you avoid any difficulties you encountered?
+              ---
+              <p class="fragment"  data-fragment-index="1">Learn from other similiar projects</p>
+              <p class="fragment"  data-fragment-index="2">By having a clearer vision of the core functionality of our project</p>
+            </script>
           </section>
         </section>
 			</div>
