--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
           ------------ | -------------
           Hjalti Geir Garðarsson | hgg29@hi.is
           Guðmundur Óli Norland | gon2@hi.is
-          Gunnar Ingi Stefánsson | email@hi.is
-          Jónas G. Sigurðsson | email@hi.is
+          Gunnar Ingi Stefánsson | gis20@hi.is
+          Jónas G. Sigurðsson | jgs7@hi.is
         </section>
         <section data-markdown>
           ## Project structure
